--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 bookRec_env/ # type: ignore
-note.txt
-bookRECOMMENDER.ipynb
+note.txt # type: ignore
+bookRECOMMENDER.ipynb # type: ignore
+BX-Book-Ratings.csv # type: ignore
+BX-Books.csv # type: ignore
+BX-Users.csv # type: ignore
