--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ bookRec_env/ # type: ignore
 note.txt # type: ignore
 bookRECOMMENDER.ipynb # type: ignore
 BX-Book-Ratings.csv # type: ignore
+BX-Books.csv # type: ignore
 
