--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ note.txt # type: ignore
 bookRECOMMENDER.ipynb # type: ignore
 BX-Book-Ratings.csv # type: ignore
 BX-Books.csv # type: ignore
+BX-Users.csv # type: ignore
 
